<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_vertical"
    tools:context="com.openup.covadonga.covadongaapp.MenuActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageViewMenuSep1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtMenu"
                android:id="@+id/textViewMenu"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageViewMenuSep2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtProcessPO"
                android:id="@+id/btnProcessPO"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSyncProv"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:id="@+id/btnSincProv"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSyncUPC"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:id="@+id/btnSincUPC"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSyncOrders"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:id="@+id/btnSincOrders"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtReport"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:id="@+id/btnReports"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSettings"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:id="@+id/btnSettings"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/gears"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
