<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_vertical"
    android:launchMode = "singleInstance"
    tools:context="com.openup.covadonga.covadongaapp.ConfirmarCantidadesActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ff0b149b"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtQuantities"
            android:textColor="#ffffffff"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/tvProduct"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/etInvoiced"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/txtInvoiced" />

        <EditText
            android:id="@+id/etReceived"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/txtReceived" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinInvoices" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:weightSum="100">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:text="@string/txtCancell"
                android:id="@+id/btnCancel"
                android:layout_marginRight="5dp"
                android:layout_weight="50" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:text="@string/txtOK"
                android:id="@+id/btnOK"
                android:layout_marginLeft="5dp"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:text="@string/txtResetQty"
                android:id="@+id/btnResetQty" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
