<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_vertical"
    tools:context="com.openup.covadonga.covadongaapp.ProcesarOrdenActivity$PlaceholderFragment">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtProducts"
                    android:textStyle="bold"
                    android:id="@+id/textProdu"
                    android:width="170dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtFac"
                    android:textStyle="bold"
                    android:id="@+id/textFactu"
                    android:width="60dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtRec"
                    android:textStyle="bold"
                    android:id="@+id/textReci"
                    android:width="60dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:id="@+id/listViewFragment"
                android:layout_marginTop="10dp"
                android:layout_weight="5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_marginTop="5dp" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEnd"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:layout_weight="45"
                    android:id="@+id/btnEnd"
                    android:layout_marginLeft="7dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtInsertBC"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btnScan"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="45" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
