<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_vertical"
    tools:context="com.openup.covadonga.covadongaapp.IngresoFacturasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtInsertarFact"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:textSize="28dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtOrder"
                    android:id="@+id/textView8"
                    android:layout_gravity="bottom"
                    android:width="160dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinOrders"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:minWidth="175dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtFactSerie"
                    android:id="@+id/textView9"
                    android:layout_gravity="bottom"
                    android:width="160dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:ems="10"
                    android:id="@+id/etSerieFact"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:width="175dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtFactNo"
                    android:id="@+id/textView5"
                    android:width="160dp"
                    android:layout_gravity="bottom" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etNoFact"
                    android:width="175dp"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtDate"
                    android:id="@+id/textView7"
                    android:width="160dp"
                    android:layout_gravity="bottom" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/etFecFact"
                    android:width="175dp"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:hint="DD/MM/AAAA"
                    android:clickable="true"
                    android:editable="false" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtInsert"
                android:id="@+id/btnInsertFact"
                android:background="@drawable/button_customize"
                android:textColor="#FFFFFF"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="5dp"
                android:width="270dp"
                android:layout_marginRight="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBack"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btnBackFact"
                    android:layout_weight="45"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNext"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btnOkFact"
                    android:layout_weight="45"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
