<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_vertical"
    tools:context="com.openup.covadonga.covadongaapp.ListaProveedorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageSeparator1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtChoseSupplier"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginTop="3dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:id="@+id/imageSeparator2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtLookUp"
                    android:textStyle="bold"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFilter"
                    android:layout_marginLeft="3dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtProcess"
                    android:id="@+id/textViewProcess"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textViewEmp"
                    android:layout_marginLeft="7dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/listViewClientes"
                android:layout_marginTop="3dp"
                android:layout_weight="5.24" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_marginTop="3dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBack"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btnBack"
                    android:layout_weight="45"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNext"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btnOK"
                    android:layout_weight="45"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
